--- a/src/ios/AGInputView.xib
+++ b/src/ios/AGInputView.xib
@@ -11,20 +11,41 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6wb-1B-FH4">
-                    <rect key="frame" x="8" y="8" width="584" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6wb-1B-FH4">
+                    <rect key="frame" x="52" y="8" width="496" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNe-Lh-K6y">
+                    <rect key="frame" x="8" y="8" width="36" height="30"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="fVg-Va-MSG"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCD-zW-gcf">
+                    <rect key="frame" x="556" y="8" width="36" height="30"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="dyj-p9-fdy"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="6wb-1B-FH4" secondAttribute="trailing" priority="750" constant="8" id="S5t-DG-Ev1"/>
+                <constraint firstItem="NNe-Lh-K6y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="LF2-vz-0ye"/>
+                <constraint firstItem="pCD-zW-gcf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="MCM-Ee-Wei"/>
                 <constraint firstItem="6wb-1B-FH4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="THF-Z3-nMK"/>
-                <constraint firstItem="6wb-1B-FH4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" priority="750" constant="8" id="zaL-2N-np0"/>
+                <constraint firstAttribute="trailing" secondItem="pCD-zW-gcf" secondAttribute="trailing" constant="8" id="h9k-rq-2NI"/>
             </constraints>
             <connections>
                 <outlet property="inputField" destination="6wb-1B-FH4" id="iOJ-1a-mxF"/>
+                <outlet property="leftButton" destination="NNe-Lh-K6y" id="QwD-XN-EJB"/>
+                <outlet property="rightButton" destination="pCD-zW-gcf" id="aLV-Ic-vAs"/>
             </connections>
             <point key="canvasLocation" x="551" y="459"/>
         </view>
