--- a/src/ios/AGInputView.xib
+++ b/src/ios/AGInputView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -36,10 +36,10 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="NNe-Lh-K6y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="LF2-vz-0ye"/>
-                <constraint firstItem="pCD-zW-gcf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="MCM-Ee-Wei"/>
-                <constraint firstItem="6wb-1B-FH4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="THF-Z3-nMK"/>
+                <constraint firstAttribute="bottom" secondItem="NNe-Lh-K6y" secondAttribute="bottom" constant="8" id="E33-UW-B1s"/>
                 <constraint firstAttribute="trailing" secondItem="pCD-zW-gcf" secondAttribute="trailing" constant="8" id="h9k-rq-2NI"/>
+                <constraint firstAttribute="bottom" secondItem="6wb-1B-FH4" secondAttribute="bottom" constant="8" id="pox-Su-iDX"/>
+                <constraint firstAttribute="bottom" secondItem="pCD-zW-gcf" secondAttribute="bottom" constant="8" id="xpf-bL-FS8"/>
             </constraints>
             <connections>
                 <outlet property="inputField" destination="6wb-1B-FH4" id="iOJ-1a-mxF"/>
