--- a/src/ios/AGInputView.xib
+++ b/src/ios/AGInputView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
@@ -11,12 +12,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6wb-1B-FH4">
-                    <rect key="frame" x="52" y="562" width="496" height="30"/>
+                    <rect key="frame" x="52" y="8" width="496" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNe-Lh-K6y">
-                    <rect key="frame" x="8" y="562" width="36" height="30"/>
+                    <rect key="frame" x="8" y="8" width="36" height="30"/>
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -25,7 +26,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCD-zW-gcf">
-                    <rect key="frame" x="556" y="562" width="36" height="30"/>
+                    <rect key="frame" x="556" y="8" width="36" height="30"/>
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -36,10 +37,10 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="NNe-Lh-K6y" secondAttribute="bottom" constant="8" id="E33-UW-B1s"/>
+                <constraint firstItem="NNe-Lh-K6y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="LF2-vz-0ye"/>
+                <constraint firstItem="pCD-zW-gcf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="MCM-Ee-Wei"/>
+                <constraint firstItem="6wb-1B-FH4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="THF-Z3-nMK"/>
                 <constraint firstAttribute="trailing" secondItem="pCD-zW-gcf" secondAttribute="trailing" constant="8" id="h9k-rq-2NI"/>
-                <constraint firstAttribute="bottom" secondItem="6wb-1B-FH4" secondAttribute="bottom" constant="8" id="pox-Su-iDX"/>
-                <constraint firstAttribute="bottom" secondItem="pCD-zW-gcf" secondAttribute="bottom" constant="8" id="xpf-bL-FS8"/>
             </constraints>
             <connections>
                 <outlet property="inputField" destination="6wb-1B-FH4" id="iOJ-1a-mxF"/>
