--- a/src/ios/AGInputView.xib
+++ b/src/ios/AGInputView.xib
@@ -27,7 +27,7 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCD-zW-gcf">
                     <rect key="frame" x="556" y="8" width="36" height="30"/>
-                    <state key="normal">
+                    <state key="normal" title="Send">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
